--- a/index.html
+++ b/index.html
@@ -4,22 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delatorre_John_Act_Project</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>College of Computer Studies</h1>
-    <h2>BSIT-3 Block No. 3</h2>
-    <p>Biodata</p>
-    <p>Fullname: John Mariel Dela Torre</p>
-    <p>Date of Birth: November 16, 2002</p>
-    <p>Gender: Male</p>
-    <p>Contact Number:09516421739</p>
-    <p>Email Address: badakzkie2020@gmail.com</p>
-    <p>Address: Poblacion, Bienunido, Bohol</p>
-    <p>Nationality: Filipino</p>
-    <p>Marital Status: Single</p>
-    <p>Education Qualifications: Bachelor's Degree in Information Technology</p>
-    <p>Skills: HTML, CSS, JavaScript, etc.</p>
-    <p>Languages Known: Bisaya, Tagalog, English, Korean, Japanese, etc.</p>
-    <p>References: Lyka Adlawan</p>
+    <div class="header">
+      <div class="title">
+        <h1>College of Computer Studies</h1>
+        <h2>BSIT-3 Block No. 3</h2>
+      </div>
+    </div>
+
+    <div class="container">
+      <table>
+        <tr>
+          <th>Biodata</th>
+        </tr>
+        <tr>
+          <th>Fullname</th>
+          <td>John Mariel Dela Torre</td>
+        </tr>
+        <tr>
+          <th>Date of Birth</th>
+          <td>November 16, 2002</td>
+        </tr>
+        <tr>
+          <th>Gender</th>
+          <td>Male</td>
+        </tr>
+        <tr>
+          <th>Contact Number</th>
+          <td>09516421739</td>
+        </tr>
+        <tr>
+          <th>Email Address</th>
+          <td>badakzkie2020@gmail.com</td>
+        </tr>
+        <tr>
+          <th>Address</th>
+          <td>Poblacion, Bienunido, Bohol</td>
+        </tr>
+        <tr>
+          <th>Nationality</th>
+          <td>Filipino</td>
+        </tr>
+        <tr>
+          <th>Marital Status</th>
+          <td>Single</td>
+        </tr>
+        <tr>
+          <th>Education Qualifications</th>
+          <td>Bachelor's Degree in Information Technology</td>
+        </tr>
+        <tr>
+          <th>Skills</th>
+          <td>HTML, CSS, JavaScript, etc.</td>
+        </tr>
+        <tr>
+          <th>Languages Known</th>
+          <td>Bisaya, Tagalog, English, Korean, Japanese, etc.</td>
+        </tr>
+        <tr>
+          <th>References</th>
+          <td>Lyka Adlawan</td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
