Add Profile Picture

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <table>
         <tr>
           <th>Biodata</th>
+          <td><img src="yang.jpg" alt="profile.jpg" /></td>
         </tr>
         <tr>
           <th>Fullname</th>
