--- a/index.html
+++ b/index.html
@@ -70,5 +70,28 @@
         </tr>
       </table>
     </div>
+
+    <div class="video-container">
+      <h3>TMC DANCESQUAD</h3>
+      <p>
+        TMC DANCESQUAD dance cover.
+      </p>
+      <video controls>
+        <source src="yang.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </div>
+
+    <!-- Audio Section -->
+    <div class="audio-container">
+      <h3>My favorite music</h3>
+      <p>
+        One of my favorite music.
+      </p>
+      <audio controls>
+        <source src="yang.mp3" type="audio/mpeg" />
+        Your browser does not support the audio tag.
+      </audio>
+    </div>
   </body>
 </html>
